# btc-wallet-poc

./: .gitignore  README.md  pyproject.toml
src/btc_wallet/: constants.py  crypto.py  rpc.py  wallet.py
src/btc_wallet/encoding/: __init__.py  base58check.py  bech32.py
src/btc_wallet/transaction/: __init__.py  input.py  utils.py  validators.py
tests/: conftest.py  test_crypto.py
